Fixed wrong color of hovered unread feed item

--- a/resources/css/components/list.css
+++ b/resources/css/components/list.css
@@ -25,6 +25,11 @@
         &.emphasize {
             @apply text-blue-300;
             @apply dark:text-gray-100;
+
+            &:hover {
+                @apply text-blue-500;
+                @apply dark:text-white;
+            }
         }
 
         &.list-item,
@@ -79,15 +84,6 @@
         &:hover {
             @apply bg-gray-200 text-gray-500;
             @apply dark:bg-gray-600 dark:text-gray-400;
-
-            &.emphasize {
-                @apply text-blue-500;
-                @apply dark:text-white;
-            }
-
-            & .caret {
-                @apply dark:text-gray-800;
-            }
         }
 
         &.selected {
@@ -109,14 +105,16 @@
         @apply odd:bg-white;
         @apply dark:odd:bg-gray-750;
 
-        &:hover {
-            @apply bg-gray-200 text-gray-500;
-            @apply dark:bg-gray-600 dark:text-gray-400;
-
-            &.emphasize {
+        &.emphasize {
+            &:hover {
                 @apply text-blue-500;
                 @apply dark:text-white;
             }
+        }
+
+        &:hover {
+            @apply bg-gray-200 text-gray-500;
+            @apply dark:bg-gray-600 dark:text-gray-400;
         }
 
         &.selected {
